--- a/finance/index.html
+++ b/finance/index.html
@@ -15,12 +15,12 @@
     <!-- Added alignment-fixes.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V8PR7EB78N"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R1QHNSSWTC"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-V8PR7EB78N');
+      gtag('config', 'G-R1QHNSSWTC');
     </script>
     <!-- End Google Analytics -->
 
