--- a/math/index.html
+++ b/math/index.html
@@ -15,12 +15,12 @@
 
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V8PR7EB78N"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R1QHNSSWTC"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-V8PR7EB78N');
+      gtag('config', 'G-R1QHNSSWTC');
     </script>
     <!-- End Google Analytics -->
 
