--- a/finance/mortgage/index.html
+++ b/finance/mortgage/index.html
@@ -17,10 +17,13 @@
     <link rel="stylesheet" href="https://freecalchub.com/css/calchub-consolidated-fixes.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     
-    <!-- Enhanced CSS fixes -->
-    <link rel="stylesheet" href="https://freecalchub.com/finance/mortgage/mortgage-calculator/css/enhanced-logo-fix.css">
-    <link rel="stylesheet" href="https://freecalchub.com/finance/mortgage/mortgage-calculator/css/enhanced-breadcrumb-fix.css">
-    <link rel="stylesheet" href="https://freecalchub.com/finance/mortgage/css/mortgage-category-layout.css">
+    <!-- Previous CSS fixes -->
+    <link rel="stylesheet" href="https://freecalchub.com/finance/mortgage/mortgage-calculator/css/calchub-header-fixes.css">
+    <link rel="stylesheet" href="https://freecalchub.com/finance/mortgage/mortgage-calculator/css/breadcrumb-fixes.css">
+    
+    <!-- New definitive fixes -->
+    <link rel="stylesheet" href="https://freecalchub.com/finance/mortgage/mortgage-calculator/css/definitive-logo-fix.css">
+    <link rel="stylesheet" href="https://freecalchub.com/finance/mortgage/css/fixed-calculator-layout.css">
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to content</a>
