Comprehensive fix for mobile menu, breadcrumbs, layout, and amortization table

--- a/finance/mortgage/index.html
+++ b/finance/mortgage/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="/css/calculator.css">
     <link rel="stylesheet" href="css/mortgage-category-layout.css">
     <link rel="stylesheet" href="css/navigation-ribbon-fix.css">
+    <link rel="stylesheet" href="css/mobile-menu-fix.css">
+    <link rel="stylesheet" href="css/breadcrumb-styling-fix.css">
+    <link rel="stylesheet" href="css/page-container-fix.css">
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to content</a>
@@ -91,7 +94,7 @@
         </div>
     </div>
 
-    <main id="main-content" class="container py-5">
+    <main id="main-content" class="container py-5 mortgage-calculators">
         <section class="category-header">
             <h1>Mortgage Calculators</h1>
             <p class="lead">Plan your home purchase and understand your mortgage options with these essential calculators.</p>
