Implement super-aggressive fixes for mortgage calculator page

--- a/finance/mortgage/mortgage-calculator/index.html
+++ b/finance/mortgage/mortgage-calculator/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/calculator.css">
     <link rel="stylesheet" href="css/mortgage-calculator.css">
-    <link rel="stylesheet" href="css/aggressive-calculator-fix.css">
+    <!-- Replace with super-aggressive CSS fix -->
+    <link rel="stylesheet" href="css/super-aggressive-calculator-fix.css">
     <script src="js/mortgage-calculator.js" defer></script>
-    <script src="js/aggressive-amortization-fix.js" defer></script>
+    <!-- Replace with super-aggressive JS fix -->
+    <script src="js/super-aggressive-amortization-fix.js" defer></script>
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to content</a>
