--- a/finance/mortgage/mortgage-calculator/index.html
+++ b/finance/mortgage/mortgage-calculator/index.html
@@ -291,3 +291,6 @@
 
     <link rel="stylesheet" href="css/navigation-header-fix.css">
 
+
+    <link rel="stylesheet" href="css/mobile-menu-fix.css">
+
