fix(calculator): Fix dark mode button styling, functionality, and breadcrumb alignment (v1.13.0)

--- a/finance/mortgage/mortgage-calculator/index.html
+++ b/finance/mortgage/mortgage-calculator/index.html
@@ -20,6 +20,10 @@
     <script src="js/refined-amortization-fix.js" defer></script>
     <!-- Global script (for dark mode, mobile menu) -->
     <script src="/js/main.js" defer></script>
+    <!-- Dark mode button fix -->
+    <link rel="stylesheet" href="css/dark-mode-button-fix.css">
+    <!-- Breadcrumb alignment fix -->
+    <link rel="stylesheet" href="css/breadcrumb-alignment-fix.css">
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to content</a>
