feat(calculator): Implement three-column responsive layout for calculator form (v1.14.0)

--- a/finance/mortgage/mortgage-calculator/index.html
+++ b/finance/mortgage/mortgage-calculator/index.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="css/dark-mode-button-fix.css">
     <!-- Breadcrumb alignment fix -->
     <link rel="stylesheet" href="css/breadcrumb-alignment-fix.css">
+    <!-- Three-column form layout fix -->
+    <link rel="stylesheet" href="css/three-column-form-fix.css">
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to content</a>
