--- a/finance/mortgage/mortgage-calculator/index.html
+++ b/finance/mortgage/mortgage-calculator/index.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" href="css/breadcrumb-alignment-fix.css">
     <!-- Three-column form layout fix -->
     <link rel="stylesheet" href="css/three-column-form-fix.css">
+    <!-- Enhanced three-column form layout fix -->
+    <link rel="stylesheet" href="css/enhanced-three-column-form-fix.css">
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to content</a>
