fix(dark-mode): Add dark mode CSS styles and update templates (v1.17.0)

--- a/calculator-template.html
+++ b/calculator-template.html
@@ -8,6 +8,8 @@
     
     <!-- Global styles -->
     <link rel="stylesheet" href="/css/styles.css">
+    <!-- Dark mode styles -->
+    <link rel="stylesheet" href="/css/dark-mode.css">
     <!-- General calculator styles -->
     <link rel="stylesheet" href="/css/calculator.css">
     <!-- Calculator Template Grid Layout -->
