--- a/mortgage-calculator-template-example.html
+++ b/mortgage-calculator-template-example.html
@@ -8,6 +8,8 @@
     
     <!-- Global styles -->
     <link rel="stylesheet" href="/css/styles.css">
+    <!-- Dark mode styles -->
+    <link rel="stylesheet" href="/css/dark-mode.css">
     <!-- General calculator styles -->
     <link rel="stylesheet" href="/css/calculator.css">
     <!-- Calculator Template Grid Layout -->
