fix(dark-mode): Standardize dark mode button and ensure dark mode CSS on all pages (v1.18.0)

--- a/calculator-template.html
+++ b/calculator-template.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/css/styles.css">
     <!-- Dark mode styles -->
     <link rel="stylesheet" href="/css/dark-mode.css">
+    <!-- Dark mode button styles -->
+    <link rel="stylesheet" href="/css/dark-mode-button.css">
     <!-- General calculator styles -->
     <link rel="stylesheet" href="/css/calculator.css">
     <!-- Calculator Template Grid Layout -->
