--- a/finance/mortgage/mortgage-calculator/index.html
+++ b/finance/mortgage/mortgage-calculator/index.html
@@ -6,6 +6,10 @@
     <title>Mortgage Calculator | CalcHub</title>
     <!-- Global styles -->
     <link rel="stylesheet" href="/css/styles.css">
+    <!-- Dark mode styles -->
+    <link rel="stylesheet" href="/css/dark-mode.css">
+    <!-- Dark mode button styles -->
+    <link rel="stylesheet" href="/css/dark-mode-button.css">
     <!-- General calculator styles -->
     <link rel="stylesheet" href="/css/calculator.css">
     <!-- Specific mortgage calculator styles -->
