--- a/mortgage-calculator-template-example.html
+++ b/mortgage-calculator-template-example.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/css/styles.css">
     <!-- Dark mode styles -->
     <link rel="stylesheet" href="/css/dark-mode.css">
+    <!-- Dark mode button styles -->
+    <link rel="stylesheet" href="/css/dark-mode-button.css">
     <!-- General calculator styles -->
     <link rel="stylesheet" href="/css/calculator.css">
     <!-- Calculator Template Grid Layout -->
