fix(dark-mode): Ensure consistent dark mode functionality and button style across all pages (v1.20.0)

--- a/finance/mortgage/index.html
+++ b/finance/mortgage/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Plan your home purchase and understand your mortgage options with these essential calculators.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/dark-mode.css">
+    <link rel="stylesheet" href="/css/dark-mode-button.css">
     <link rel="stylesheet" href="/css/calculator.css">
     <link rel="stylesheet" href="css/mortgage-category-layout.css">
     <link rel="stylesheet" href="css/navigation-ribbon-fix.css">
@@ -221,5 +223,6 @@
     </footer>
     
     <script src="/js/main.js"></script>
+    <script src="/js/dark-mode.js"></script>
 </body>
 </html>
