--- a/math/index.html
+++ b/math/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Free online math calculators for basic math, algebra, geometry, statistics, and calculus. Get accurate results and educational insights for all your math problems.">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/dark-mode.css">
+    <link rel="stylesheet" href="/css/dark-mode-button.css">
     <link rel="stylesheet" href="/css/navigation-ribbon.css">
     <link rel="stylesheet" href="/css/breadcrumb-styles.css">
     <link rel="stylesheet" href="/css/calchub-consolidated-fixes.css">
