--- a/finance/mortgage/mortgage-calculator/index.html
+++ b/finance/mortgage/mortgage-calculator/index.html
@@ -20,6 +20,7 @@
     <script src="js/refined-amortization-fix.js" defer></script>
     <!-- Global script (for dark mode, mobile menu) -->
     <script src="/js/main.js" defer></script>
+    <script src="/js/dark-mode.js" defer></script>
     <!-- Dark mode button fix -->
     <link rel="stylesheet" href="css/dark-mode-button-fix.css">
     <!-- Breadcrumb alignment fix -->
