--- a/finance/mortgage/mortgage-calculator/index.html
+++ b/finance/mortgage/mortgage-calculator/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="/css/dark-mode.css">
     <!-- Dark mode button styles -->
     <link rel="stylesheet" href="/css/dark-mode-button.css">
+    <link rel="stylesheet" href="/css/navigation-ribbon.css">
+    <link rel="stylesheet" href="/css/breadcrumb-styles.css">
+    <link rel="stylesheet" href="/css/calchub-consolidated-fixes.css">
     <!-- Specific mortgage calculator styles -->
     <link rel="stylesheet" href="/finance/mortgage/mortgage-calculator/css/mortgage-calculator.css">
     <!-- Page alignment and form layout fixes -->
