--- a/finance/index.html
+++ b/finance/index.html
@@ -473,10 +473,16 @@
         </div>
     </footer>
 
-    <script src="/js/main.js" defer></script>
-    <script src="/js/dark-mode.js" defer></script>
-    <script src="/js/mobile-menu.js" defer></script>
-    <script src="/js/calchub-consolidated-fixes.js" defer></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/dark-mode.js"></script>
+
+</body>
+</html>
+    <script>
+      console.log("Inline script test executed!");
+    </script>
+    <script src="/js/main.js"></script>
+    <script src="/js/dark-mode.js"></script>
 
 </body>
 </html>
