--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,7 @@
     <title>About CalcHub - Free Online Calculators</title>
     <meta name="description" content="Learn about CalcHub's mission to provide free, accurate calculators for everyday questions. Discover our story, values, and commitment to helping people make better decisions.">
     <link rel="canonical" href="https://www.freecalchub.com/about/">
+    <!-- Use absolute paths -->
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/dark-mode.css">
     <link rel="stylesheet" href="/css/dark-mode-button.css">
@@ -21,8 +22,8 @@
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-R1QHNSSWTC');
+      gtag("js", new Date());
+      gtag("config", "G-R1QHNSSWTC");
     </script>
     <!-- End Google Analytics -->
 
@@ -68,20 +69,22 @@
     <header>
         <div class="header-container">
             <div class="logo-container">
-                <a href="../" class="logo">
-    <img src="../images/logo.svg" alt="CalcHub Logo" height="40">
-</a>
+                <!-- Use absolute paths -->
+                <a href="/" class="logo">
+                    <img src="/images/logo.svg" alt="CalcHub Logo" height="40">
+                </a>
             </div>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="../finance/">Finance</a></li>
-                    <li><a href="../math/">Math</a></li>
-                    <li><a href="../health/">Health</a></li>
-                    <li><a href="../conversions/">Conversions</a></li>
-                    <li><a href="../date-time/">Date & Time</a></li>
-                    <li><a href="../business/">Business</a></li>
-                    <li><a href="../lifestyle/">Lifestyle</a></li>
-                    <li><a href="../blog/">Blog</a></li>
+                    <!-- Use absolute paths -->
+                    <li><a href="/finance/">Finance</a></li>
+                    <li><a href="/math/">Math</a></li>
+                    <li><a href="/health/">Health</a></li>
+                    <li><a href="/conversions/">Conversions</a></li>
+                    <li><a href="/date-time/">Date & Time</a></li>
+                    <li><a href="/business/">Business</a></li>
+                    <li><a href="/lifestyle/">Lifestyle</a></li>
+                    <li><a href="/blog/">Blog</a></li>
                 </ul>
             </nav>
             <div class="header-controls">
@@ -105,21 +108,23 @@
         </div>
         <nav class="mobile-nav">
             <ul>
-                <li><a href="../finance/">Finance</a></li>
-                <li><a href="../math/">Math</a></li>
-                <li><a href="../health/">Health</a></li>
-                <li><a href="../conversions/">Conversions</a></li>
-                <li><a href="../date-time/">Date & Time</a></li>
-                <li><a href="../business/">Business</a></li>
-                <li><a href="../lifestyle/">Lifestyle</a></li>
-                <li><a href="../blog/">Blog</a></li>
+                <!-- Use absolute paths -->
+                <li><a href="/finance/">Finance</a></li>
+                <li><a href="/math/">Math</a></li>
+                <li><a href="/health/">Health</a></li>
+                <li><a href="/conversions/">Conversions</a></li>
+                <li><a href="/date-time/">Date & Time</a></li>
+                <li><a href="/business/">Business</a></li>
+                <li><a href="/lifestyle/">Lifestyle</a></li>
+                <li><a href="/blog/">Blog</a></li>
             </ul>
         </nav>
     </div>
 
     <div class="breadcrumbs">
         <div class="breadcrumbs-container">
-            <a href="../">Home</a>
+            <!-- Use absolute paths -->
+            <a href="/">Home</a>
             <span class="separator">/</span>
             <span class="current">About</span>
         </div>
@@ -300,37 +305,40 @@
                 <div class="footer-column">
                     <h4>Categories</h4>
                     <ul>
-                        <li><a href="../finance/">Finance</a></li>
-                        <li><a href="../math/">Math</a></li>
-                        <li><a href="../health/">Health</a></li>
-                        <li><a href="../conversions/">Conversions</a></li>
-                        <li><a href="../date-time/">Date & Time</a></li>
-                        <li><a href="../business/">Business</a></li>
-                        <li><a href="../lifestyle/">Lifestyle</a></li>
+                        <!-- Use absolute paths -->
+                        <li><a href="/finance/">Finance</a></li>
+                        <li><a href="/math/">Math</a></li>
+                        <li><a href="/health/">Health</a></li>
+                        <li><a href="/conversions/">Conversions</a></li>
+                        <li><a href="/date-time/">Date & Time</a></li>
+                        <li><a href="/business/">Business</a></li>
+                        <li><a href="/lifestyle/">Lifestyle</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h4>Popular Calculators</h4>
                     <ul>
-                        <li><a href="../finance/mortgage/mortgage-calculator/">Mortgage Calculator</a></li>
-                        <li><a href="../finance/investment/compound-interest/">Compound Interest</a></li>
-                        <li><a href="../health/bmi/bmi-calculator/">BMI Calculator</a></li>
-                        <li><a href="../conversions/currency/">Currency Converter</a></li>
-                        <li><a href="../math/percentages/percentage-calculator/">Percentage Calculator</a></li>
-                        <li><a href="../date-time/age/">Age Calculator</a></li>
-                        <li><a href="../business/roi/">ROI Calculator</a></li>
-                        <li><a href="../lifestyle/tip/">Tip Calculator</a></li>
+                        <!-- Use absolute paths -->
+                        <li><a href="/finance/mortgage/mortgage-calculator/">Mortgage Calculator</a></li>
+                        <li><a href="/finance/investment/compound-interest/">Compound Interest</a></li>
+                        <li><a href="/health/bmi/bmi-calculator/">BMI Calculator</a></li>
+                        <li><a href="/conversions/currency/">Currency Converter</a></li>
+                        <li><a href="/math/percentages/percentage-calculator/">Percentage Calculator</a></li>
+                        <li><a href="/date-time/age/">Age Calculator</a></li>
+                        <li><a href="/business/roi/">ROI Calculator</a></li>
+                        <li><a href="/lifestyle/tip/">Tip Calculator</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
                     <h4>About</h4>
                     <ul>
-                        <li><a href="../about/">About Us</a></li>
-                        <li><a href="../contact/">Contact</a></li>
-                        <li><a href="../privacy/">Privacy Policy</a></li>
-                        <li><a href="../terms/">Terms of Use</a></li>
-                        <li><a href="../gdpr/">GDPR Compliance</a></li>
-                        <li><a href="../sitemap.xml">Sitemap</a></li>
+                        <!-- Use absolute paths -->
+                        <li><a href="/about/">About Us</a></li>
+                        <li><a href="/contact/">Contact</a></li>
+                        <li><a href="/privacy/">Privacy Policy</a></li>
+                        <li><a href="/terms/">Terms of Use</a></li>
+                        <li><a href="/gdpr/">GDPR Compliance</a></li>
+                        <li><a href="/sitemap.xml">Sitemap</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
@@ -341,31 +349,16 @@
                         <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     </div>
-                    <div class="newsletter">
-                        <h4>Stay Updated</h4>
-                        <p>Subscribe to our newsletter for new calculators and articles</p>
-                        <form id="newsletter-form">
-                            <input type="email" placeholder="Your email address" required>
-                            <button type="submit" class="btn">Subscribe</button>
-                        </form>
-                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <div class="copyright">&copy; 2025 CalcHub. All rights reserved.</div>
-                <div class="footer-links">
-                    <a href="../terms/">Terms</a> | 
-                    <a href="../gdpr/">GDPR</a> | 
-                    <a href="../cookies/">Cookies</a>
-                </div>
+                <p>&copy; 2025 CalcHub. All rights reserved.</p>
             </div>
         </div>
     </footer>
 
-    <script src="/js/dark-mode.js"></script>
-    <script src="/js/mobile-menu.js"></script>
+    <!-- Added required JS includes with absolute paths -->
     <script src="/js/main.js"></script>
-    <script src="/js/calchub-consolidated-fixes.js"></script>
-
+    <script src="/js/dark-mode.js"></script>
 </body>
 </html>
