--- a/about/index.html
+++ b/about/index.html
@@ -358,7 +358,7 @@
     </footer>
 
     <!-- Added required JS includes with absolute paths -->
-    <script src="/js/main.js"></script>
-    <script src="/js/dark-mode.js"></script>
+    <script src="/js/main.js" defer></script>
+    <script src="/js/dark-mode.js" defer></script>
 </body>
 </html>
