--- a/gdpr/index.html
+++ b/gdpr/index.html
@@ -6,6 +6,7 @@
     <title>GDPR Compliance | CalcHub - Free Online Calculators</title>
     <meta name="description" content="CalcHub's GDPR compliance policy. Learn how we protect your data and respect your privacy rights under the General Data Protection Regulation.">
     <link rel="canonical" href="https://www.freecalchub.com/gdpr/">
+    <!-- Use absolute paths -->
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/dark-mode.css">
     <link rel="stylesheet" href="/css/dark-mode-button.css">
@@ -21,8 +22,8 @@
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-R1QHNSSWTC');
+      gtag("js", new Date());
+      gtag("config", "G-R1QHNSSWTC");
     </script>
     <!-- End Google Analytics -->
 
@@ -53,20 +54,22 @@
     <header>
         <div class="header-container">
             <div class="logo-container">
-                <a href="../" class="logo">
-    <img src="../images/logo.svg" alt="CalcHub Logo" height="40">
-</a>
+                <!-- Use absolute paths -->
+                <a href="/" class="logo">
+                    <img src="/images/logo.svg" alt="CalcHub Logo" height="40">
+                </a>
             </div>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="../finance/">Finance</a></li>
-                    <li><a href="../math/">Math</a></li>
-                    <li><a href="../health/">Health</a></li>
-                    <li><a href="../conversions/">Conversions</a></li>
-                    <li><a href="../date-time/">Date & Time</a></li>
-                    <li><a href="../business/">Business</a></li>
-                    <li><a href="../lifestyle/">Lifestyle</a></li>
-                    <li><a href="../blog/">Blog</a></li>
+                    <!-- Use absolute paths -->
+                    <li><a href="/finance/">Finance</a></li>
+                    <li><a href="/math/">Math</a></li>
+                    <li><a href="/health/">Health</a></li>
+                    <li><a href="/conversions/">Conversions</a></li>
+                    <li><a href="/date-time/">Date & Time</a></li>
+                    <li><a href="/business/">Business</a></li>
+                    <li><a href="/lifestyle/">Lifestyle</a></li>
+                    <li><a href="/blog/">Blog</a></li>
                 </ul>
             </nav>
             <div class="header-controls">
@@ -90,21 +93,23 @@
         </div>
         <nav class="mobile-nav">
             <ul>
-                <li><a href="../finance/">Finance</a></li>
-                <li><a href="../math/">Math</a></li>
-                <li><a href="../health/">Health</a></li>
-                <li><a href="../conversions/">Conversions</a></li>
-                <li><a href="../date-time/">Date & Time</a></li>
-                <li><a href="../business/">Business</a></li>
-                <li><a href="../lifestyle/">Lifestyle</a></li>
-                <li><a href="../blog/">Blog</a></li>
+                <!-- Use absolute paths -->
+                <li><a href="/finance/">Finance</a></li>
+                <li><a href="/math/">Math</a></li>
+                <li><a href="/health/">Health</a></li>
+                <li><a href="/conversions/">Conversions</a></li>
+                <li><a href="/date-time/">Date & Time</a></li>
+                <li><a href="/business/">Business</a></li>
+                <li><a href="/lifestyle/">Lifestyle</a></li>
+                <li><a href="/blog/">Blog</a></li>
             </ul>
         </nav>
     </div>
 
     <div class="breadcrumbs">
         <div class="breadcrumbs-container">
-            <a href="../">Home</a>
+            <!-- Use absolute paths -->
+            <a href="/">Home</a>
             <span class="separator">/</span>
             <span class="current">GDPR Compliance</span>
         </div>
@@ -209,7 +214,7 @@
 
             <div class="legal-section">
                 <h2>9. Cookies and Tracking Technologies</h2>
-                <p>We use cookies and similar tracking technologies to collect and track information about your interactions with our website. For detailed information about the types of cookies we use, their purposes, and how to control them, please see our <a href="../privacy/index.html#cookies">Cookie Policy</a>.</p>
+                <p>We use cookies and similar tracking technologies to collect and track information about your interactions with our website. For detailed information about the types of cookies we use, their purposes, and how to control them, please see our <a href="/privacy/index.html#cookies">Cookie Policy</a>.</p>
             </div>
 
             <div class="legal-section">
@@ -244,56 +249,60 @@
                 <div class="footer-column">
                     <h4>Categories</h4>
                     <ul>
-                        <li><a href="../finance/">Finance</a></li>
-                        <li><a href="../math/">Math</a></li>
-                        <li><a href="../health/">Health</a></li>
-                        <li><a href="../conversions/">Conversions</a></li>
-                        <li><a href="../date-time/">Date & Time</a></li>
-                        <li><a href="../business/">Business</a></li>
-                        <li><a href="../lifestyle/">Lifestyle</a></li>
+                        <!-- Use absolute paths -->
+                        <li><a href="/finance/">Finance</a></li>
+                        <li><a href="/math/">Math</a></li>
+                        <li><a href="/health/">Health</a></li>
+                        <li><a href="/conversions/">Conversions</a></li>
+                        <li><a href="/date-time/">Date & Time</a></li>
+                        <li><a href="/business/">Business</a></li>
+                        <li><a href="/lifestyle/">Lifestyle</a></li>
                     </ul>
                 </div>
-            <div class="footer-section">
-                <h3>Popular Calculators</h3>
-                <ul>
-                    <li><a href="../finance/mortgage/mortgage-calculator/">Mortgage Calculator</a></li>
-                    <li><a href="../finance/investment/compound-interest/">Compound Interest</a></li>
-                    <li><a href="../health/bmi/bmi-calculator/">BMI Calculator</a></li>
-                    <li><a href="../conversions/currency/">Currency Converter</a></li>
-                    <li><a href="../math/percentages/percentage-calculator/">Percentage Calculator</a></li>
-                    <li><a href="../date-time/age/">Age Calculator</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h3>About CalcHub</h3>
-                <ul>
-                    <li><a href="../about/">About Us</a></li>
-                    <li><a href="../privacy/">Privacy Policy</a></li>
-                    <li><a href="../terms/">Terms of Service</a></li>
-                    <li><a href="../gdpr/">GDPR Compliance</a></li>
-                    <li><a href="../contact/">Contact Us</a></li>
-                    <li><a href="../sitemap.xml">Sitemap</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h3>Connect With Us</h3>
-                <div class="social-links">
-                    <a href="https://twitter.com/freecalchub" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="https://facebook.com/freecalchub" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-                    <a href="https://instagram.com/freecalchub" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="https://pinterest.com/freecalchub" aria-label="Pinterest"><i class="fab fa-pinterest"></i></a>
+                <div class="footer-column">
+                    <h4>Popular Calculators</h4>
+                    <ul>
+                        <!-- Use absolute paths -->
+                        <li><a href="/finance/mortgage/mortgage-calculator/">Mortgage Calculator</a></li>
+                        <li><a href="/finance/investment/compound-interest/">Compound Interest</a></li>
+                        <li><a href="/health/bmi/bmi-calculator/">BMI Calculator</a></li>
+                        <li><a href="/conversions/currency/">Currency Converter</a></li>
+                        <li><a href="/math/percentages/percentage-calculator/">Percentage Calculator</a></li>
+                        <li><a href="/date-time/age/">Age Calculator</a></li>
+                        <li><a href="/business/roi/">ROI Calculator</a></li>
+                        <li><a href="/lifestyle/tip/">Tip Calculator</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h4>About</h4>
+                    <ul>
+                        <!-- Use absolute paths -->
+                        <li><a href="/about/">About Us</a></li>
+                        <li><a href="/contact/">Contact</a></li>
+                        <li><a href="/privacy/">Privacy Policy</a></li>
+                        <li><a href="/terms/">Terms of Use</a></li>
+                        <li><a href="/gdpr/">GDPR Compliance</a></li>
+                        <li><a href="/sitemap.xml">Sitemap</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h4>Connect</h4>
+                    <div class="social-links">
+                        <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2025 CalcHub. All rights reserved.</p>
+            <div class="footer-bottom">
+                <p>&copy; 2025 CalcHub. All rights reserved.</p>
+            </div>
         </div>
     </footer>
 
-    <script src="/js/dark-mode.js"></script>
-    <script src="/js/mobile-menu.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/calchub-consolidated-fixes.js"></script>
-
+    <!-- Added required JS includes with absolute paths -->
+    <script src="/js/main.js" defer></script>
+    <script src="/js/dark-mode.js" defer></script>
 </body>
 </html>
