--- a/index.html
+++ b/index.html
@@ -380,8 +380,9 @@
                 <li><a href="/blog/">Blog</a></li>
                 <li><a href="/about/">About Us</a></li>
                 <li><a href="/contact/">Contact</a></li>
-                <li><a href="/privacy-policy/">Privacy Policy</a></li>
-                <li><a href="/terms-of-service/">Terms of Service</a></li>
+                <li><a href="/privacy/">Privacy Policy</a></li>
+                <li><a href="/terms/">Terms of Service</a></li>
+                <li><a href="/gdpr/">Data Protection</a></li>
             </ul>
         </div>
         
