--- a/finance/mortgage/mortgage-calculator/index.html
+++ b/finance/mortgage/mortgage-calculator/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/dark-mode.css">
     <!-- Dark mode button styles -->
     <link rel="stylesheet" href="/css/dark-mode-button.css">
+    <!-- Missing Global CSS -->
     <link rel="stylesheet" href="/css/navigation-ribbon.css">
     <link rel="stylesheet" href="/css/breadcrumb-styles.css">
     <link rel="stylesheet" href="/css/calchub-consolidated-fixes.css">
@@ -282,6 +283,8 @@
                     <li><a href="/blog/">Blog</a></li>
                     <li><a href="/about/">About Us</a></li>
                     <li><a href="/contact/">Contact</a></li>
+
+                    
                 </ul>
             </div>
             <div class="footer-column">
