--- a/privacy/index.html
+++ b/privacy/index.html
@@ -242,8 +242,8 @@
             <div class="legal-section">
                 <h2>10. Contact Us</h2>
                 <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-                <p>Email: privacy@freecalchub.com</p>
-                <p>Address: CalcHub Privacy Office, 123 Calculator Way, Web City, 12345</p>
+                <p>Email: support@freecalchub.com</p>
+                 
             </div>
         </section>
     </main>
