--- a/about/index.html
+++ b/about/index.html
@@ -252,7 +252,7 @@
                         </div>
                         <h3>Email</h3>
                         <p>For general inquiries, feedback, or suggestions:</p>
-                        <a href="mailto:contact@freecalchub.com">contact@freecalchub.com</a>
+                        <a href="mailto:support@freecalchub.com">support@freecalchub.com</a>
                     </div>
                     <div class="contact-option">
                         <div class="contact-icon">
@@ -268,7 +268,7 @@
                         </div>
                         <h3>Business Inquiries</h3>
                         <p>For partnership or advertising opportunities:</p>
-                        <a href="mailto:business@freecalchub.com">business@freecalchub.com</a>
+                        <a href="mailto:support@freecalchub.com">support@freecalchub.com</a>
                     </div>
                 </div>
                 <div class="contact-form-section">
