--- a/finance/mortgage/mortgage-calculator/index.html
+++ b/finance/mortgage/mortgage-calculator/index.html
@@ -283,17 +283,14 @@
                     <li><a href="/blog/">Blog</a></li>
                     <li><a href="/about/">About Us</a></li>
                     <li><a href="/contact/">Contact</a></li>
-                    <li><a href="/privacy/">Privacy Policy</a></li>
-                    <li><a href="/terms/">Terms of Use</a></li>
-                    <li><a href="/gdpr/">GDPR Compliance</a></li>
-                    <li><a href="/sitemap.xml">Sitemap</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h3>Legal</h3>
                 <ul>
-                    <li><a href="/privacy-policy/">Privacy Policy</a></li>
-                    <li><a href="/terms-of-service/">Terms of Service</a></li>
+                    <li><a href="/privacy/">Privacy Policy</a></li>
+                    <li><a href="/terms/">Terms of Service</a></li>
+                    <li><a href="/GDPR/">Data Protection - GDPR</a></li>
                 </ul>
             </div>
         </div>
