--- a/finance/mortgage/mortgage-calculator/index.html
+++ b/finance/mortgage/mortgage-calculator/index.html
@@ -74,7 +74,7 @@
     </header>
     
     <div id="mobile-menu" class="mobile-menu">
-        <button class="close-menu" aria-label="Close menu">×</button>
+        <button id="mobile-menu-close" class="close-menu" aria-label="Close menu">×</button>
         <ul>
             <li><a href="/finance/">Finance</a></li>
             <li><a href="/math/">Math</a></li>
@@ -301,5 +301,4 @@
 
 </body>
 </html>
-
 
