--- a/finance/mortgage/mortgage-calculator/index.html
+++ b/finance/mortgage/mortgage-calculator/index.html
@@ -290,7 +290,7 @@
                 <ul>
                     <li><a href="/privacy/">Privacy Policy</a></li>
                     <li><a href="/terms/">Terms of Service</a></li>
-                    <li><a href="/GDPR/">Data Protection - GDPR</a></li>
+                    <li><a href="/GDPR/">Data Protection</a></li>
                 </ul>
             </div>
         </div>
